--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "scripts": {
     "start": "node src/server.js",
     "dev": "nodemon src/server.js",
-    "test": "jest --coverage"
+    "test": "jest --coverage",
+    "simulate": "node test/simulation.js"
   },
   "keywords": [
     "tic-tac-toe",
@@ -18,19 +19,20 @@
   "author": "LILA Assignment",
   "license": "MIT",
   "dependencies": {
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "socket.io": "^4.6.1",
+    "joi": "^17.11.0",
     "mongoose": "^8.0.3",
     "redis": "^4.6.5",
-    "dotenv": "^16.3.1",
-    "cors": "^2.8.5",
+    "socket.io": "^4.6.1",
+    "socket.io-client": "^4.8.1",
     "uuid": "^9.0.0",
-    "joi": "^17.11.0",
     "winston": "^3.11.0"
   },
   "devDependencies": {
-    "nodemon": "^3.0.2",
     "jest": "^29.7.0",
+    "nodemon": "^3.0.2",
     "supertest": "^6.3.3"
   },
   "engines": {
@@ -38,4 +40,3 @@
     "npm": ">=9.0.0"
   }
 }
-
